# fastapi-course-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0c69960b36b1_add_timezone_to_datetime_columns.py  a027eb02e746_initial_migration.py
models/: __init__.py  category.py  promotion.py  store.py  user.py
routers/: auth.py  categories.py  files.py  promotions.py  scraper.py  stores.py
schemas/: category.py  promotion.py  store.py  user.py
services/: category_service.py  pdf_generator.py  promotion_service.py  silpo_scraper.py  store_service.py  user_service.py
settings/: db.py
settings/configs/: app.py
utils/: security.py
