[project]
name = "fastapi-course-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authx>=1.7.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.136.3",
    "fpdf2>=2.8.7",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]
